[project]
name = "code-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-anthropic>=1.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.10",
    "langsmith>=0.7.37",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/API"]
